<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutLoginRegister"
    android:background="@color/loginBackground"
    tools:context=".View.LoginRegisterActivity">



    <TextView
        android:id="@+id/textView"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/faculty_text1"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fmi_logo_view" />

    <TextView
        android:id="@+id/textView2"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/faculty_text2"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/fmi_logo_view"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/faculty_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usm_white_450x455" />

    <com.marozzi.roundbutton.RoundButton
        android:id="@+id/loginButton"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_above="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:onClick="tryLogin"
        android:text="@string/login_button1"
        android:textAppearance="@android:style/TextAppearance.Widget.DropDownHint"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:rb_animation_alpha="true"
        app:rb_animation_corner_radius="25dp"
        app:rb_animation_duration="150"
        app:rb_animation_progress_color="#7dec89"
        app:rb_animation_progress_padding="4dp"
        app:rb_animation_progress_width="2dp"
        app:rb_background_color="#49ac55"
        app:rb_background_color_pressed="#1b7325"
        app:rb_corner_color="#79b77e"
        app:rb_corner_color_pressed="#00a63030"
        app:rb_corner_radius="28dp"
        app:rb_corner_width="1dp"
        app:rb_text_color="#e9e9e9"
        app:rb_text_color_pressed="#ffffff" />

    <com.marozzi.roundbutton.RoundButton
        android:id="@+id/registerButton"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:onClick="tryRegister"
        android:text="@string/register_button1"
        android:textAppearance="@android:style/TextAppearance.Widget.DropDownHint"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:rb_animation_alpha="true"
        app:rb_animation_corner_radius="25dp"
        app:rb_animation_duration="150"
        app:rb_animation_progress_color="#7dec89"
        app:rb_animation_progress_padding="4dp"
        app:rb_animation_progress_width="2dp"
        app:rb_background_color="#388e43"
        app:rb_background_color_pressed="#1b7325"
        app:rb_corner_color="#79b77e"
        app:rb_corner_color_pressed="#00a63030"
        app:rb_corner_radius="28dp"
        app:rb_corner_width="1dp"
        app:rb_text_color="#e9e9e9"
        app:rb_text_color_pressed="#ffffff" />

</androidx.constraintlayout.widget.ConstraintLayout>