<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SettingsActivity"
    android:background="#2786C5">

    <include
        android:id="@+id/include4"
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/IDMaterialTextFieldSettings"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        app:mtf_image="@drawable/ic_mail_gray_24dp"
        app:mtf_labelColor="#e0ffffff"
        app:mtf_openKeyboardOnFocus="true">

        <EditText
            android:id="@+id/IDEditTextSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="ex: 2019xxxxxxxx722"
            android:hint="@string/id_editText"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="17sp"
            tools:targetApi="o" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.marozzi.roundbutton.RoundButton
        android:id="@+id/saveRoundButtonSettings"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/saveRoundButton"
        android:textAppearance="@android:style/TextAppearance.Widget.DropDownHint"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDMaterialTextFieldSettings"
        app:rb_animation_alpha="true"
        app:rb_animation_corner_radius="25dp"
        app:rb_animation_duration="150"
        app:rb_animation_progress_color="#7dec89"
        app:rb_animation_progress_padding="4dp"
        app:rb_animation_progress_width="2dp"
        app:rb_background_color="#49ac55"
        app:rb_background_color_pressed="#1b7325"
        app:rb_corner_color="#79b77e"
        app:rb_corner_color_pressed="#00a63030"
        app:rb_corner_radius="28dp"
        app:rb_corner_width="1dp"
        app:rb_text_color="#e9e9e9"
        app:rb_text_color_pressed="#ffffff" />

    <com.marozzi.roundbutton.RoundButton
        android:id="@+id/RBSettingsNewServer"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/change_server"
        android:textAppearance="@android:style/TextAppearance.Widget.DropDownHint"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveRoundButtonSettings"
        app:rb_animation_alpha="true"
        app:rb_animation_corner_radius="25dp"
        app:rb_animation_duration="150"
        app:rb_animation_progress_color="#7dec89"
        app:rb_animation_progress_padding="4dp"
        app:rb_animation_progress_width="2dp"
        app:rb_background_color="#49ac55"
        app:rb_background_color_pressed="#1b7325"
        app:rb_corner_color="#79b77e"
        app:rb_corner_color_pressed="#00a63030"
        app:rb_corner_radius="28dp"
        app:rb_corner_width="1dp"
        app:rb_text_color="#e9e9e9"
        app:rb_text_color_pressed="#ffffff" />

</androidx.constraintlayout.widget.ConstraintLayout>